# colmena

./: .editorconfig  .envrc  .gitattributes  .gitignore  .srcignore  CNAME  Cargo.nix  Cargo.toml  LICENSE  README.md  default.nix  dev-shell.nix  flake-compat.nix  flake.nix  garnix.yaml  index.html  nix-eval-jobs-stable.patch  nix-eval-jobs-unstable.patch  package.nix  pkgs.nix  renovate.json  shell.nix  test-shell.nix
.github/workflows/: build.yml  debug.yml  editorconfig.yml  linters.yml  manual-stable.nix  manual-stable.yml  manual.yml  tests.yml
0.2/: 404.html  contributing.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
0.2/examples/: index.html  multi-arch.html
0.2/features/: apply-local.html  eval.html  index.html  keys.html  parallelism.html  tags.html
0.2/reference/: cli.html  deployment.html  index.html  meta.html
0.2/tutorial/: flakes.html  index.html  migration.html
0.3/: 404.html  contributing.html  index.html  introduction.html  print.html  release-notes.html  searchindex.js  searchindex.json
0.3/examples/: index.html  multi-arch.html
0.3/features/: apply-local.html  eval.html  index.html  keys.html  parallelism.html  remote-builds.html  tags.html
0.3/html/: 404.html  contributing.html  index.html  introduction.html  print.html
0.3/reference/: cli.html  deployment.html  index.html  meta.html
0.3/tutorial/: flakes.html  index.html  migration.html
0.4/: 404.html  contributing.html  highlight.js  index.html  introduction.html  print.html  release-notes.html  searchindex.js  searchindex.json
0.4/examples/: index.html  multi-arch.html
0.4/features/: apply-local.html  eval.html  index.html  keys.html  parallelism.html  remote-builds.html  tags.html
0.4/reference/: cli.html  deployment.html  index.html  meta.html
0.4/tutorial/: flakes.html  index.html  migration.html
0.5/: 404.html  contributing.html  print.html  release-notes.html  toc.html
0.5/examples/: multi-arch.html
0.5/features/: eval.html  parallelism.html  remote-builds.html  tags.html
0.5/reference/: cli.html  deployment.html
0.5/tutorial/: flakes.html  index.html  migration.html
contrib/: colmena-wrapper.nix  colmena-wrapper.sh.in
integration-tests/: README.md  default.nix  nixpkgs-stable.nix  nixpkgs.nix  tools.nix
integration-tests/allow-apply-all/: default.nix  hive.nix
integration-tests/apply/: default.nix  hive.nix  test-script.py
integration-tests/apply-fail/: default.nix  hive.nix
integration-tests/apply-local/: default.nix  hive.nix
integration-tests/build-on-target/: default.nix  hive.nix
integration-tests/exec/: default.nix  hive.nix
integration-tests/flakes/: default.nix  flake.nix  hive.nix  probe.nix
integration-tests/parallel/: default.nix  hive.nix
manual/: README.md  book.release.toml  book.stable.toml  book.toml  colorized-help.nix  default.nix  preprocess.py
manual/src/: SUMMARY.md  contributing.md  introduction.md  release-notes.md
nix/: rust-analyzer.sh  sources.json
src/: cli.rs  deployment.rs  error.rs  eval.nix  job.rs  main.rs  nix.rs  progress.rs  troubleshooter.rs  util.rs
src/command/: apply.rs  apply_local.rs  build.rs  eval.rs  exec.rs  introspect.rs  list.rs  mod.rs  nix_info.rs  reboot.rs  (+3 more)
stable/: 404.html  contributing.html  index.html  introduction.html  print.html  release-notes.html
unstable/: 404.html  contributing.html  index.html  introduction.html  print.html  release-notes.html  searchindex.js  searchindex.json  toc.html  toc.js
(+111 files in other folders)
