[package]
name = "colmena"
version = "0.4.0-pre"
authors = ["Zhaofeng Li <hello@zhaofeng.li>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.42"
atty = "0.2"
clap = "3.0.0"
clap_complete = "3.0.0"
clicolors-control = "1"
console = "0.15.0"
const_format = "0.2.22"
env_logger = "0.9.0"
futures = "0.3.8"
glob = "0.3.0"
hostname = "0.3.1"
indicatif = "0.17.0-rc.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
libc = "0.2.81"
log = "0.4.11"
quit = "1.1.2"
regex = "1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1.5"
sys-info = "0.9.0"
snafu = "0.7.0"
tempfile = "3.1.0"
tokio-stream = "0.1.8"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
ntest = "0.8.0"
tokio-test = "0.4.0"

[dependencies.tokio]
version = "1.0.0"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
