[package]
name = "colmena"
version = "0.5.0-pre"
authors = ["Zhaofeng Li <hello@zhaofeng.li>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.68"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.3"
clicolors-control = "1"
console = "0.15.5"
const_format = "0.2.30"
env_logger = "0.11.0"
futures = "0.3.28"
glob = "0.3.1"
hostname = "0.4.0"
indicatif = "0.17.3"
itertools = "0.14.0"
libc = "0.2.144"
log = "0.4.17"
quit = "2.0.0"
regex = "1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1.5"
snafu = { version = "0.8.0", features = ["backtrace", "backtraces-impl-backtrace-crate"] }
sys-info = "0.9.1"
tempfile = "3.5.0"
tokio-stream = "0.1.14"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
ntest = "0.9.0"
tokio-test = "0.4.2"

[dependencies.tokio]
version = "1.28.1"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
